--- a/app/src/main/res/layout-land/game_activity.xml
+++ b/app/src/main/res/layout-land/game_activity.xml
@@ -74,7 +74,7 @@
 			android:textColor="@color/colorToast"/>
 
 	<TextView
-			android:id="@+id/tvPoints"
+			android:id="@+id/tvClicks"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:textSize="32sp"
