--- a/app/src/main/res/layout/dialog_changing.xml
+++ b/app/src/main/res/layout/dialog_changing.xml
@@ -16,19 +16,23 @@
 			app:items_visible="three"/>
 
 	<ImageView
+		    android:id="@+id/right_arrow"
 			android:layout_alignParentEnd="true"
 			android:layout_centerVertical="true"
 			android:layout_marginEnd="10dp"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
+		    android:visibility="invisible"
 			app:srcCompat="@drawable/right"/>
 
 	<ImageView
+			android:id="@+id/left_arrow"
 			android:layout_centerVertical="true"
 			android:layout_marginStart="10dp"
 			android:layout_marginBottom="10dp"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
+			android:visibility="invisible"
 			app:srcCompat="@drawable/left"/>
 
 	<Button
