--- a/app/src/main/res/layout-land/shop_activity.xml
+++ b/app/src/main/res/layout-land/shop_activity.xml
@@ -22,8 +22,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="@id/tempIncrementTap"
-            app:layout_constraintRight_toRightOf="@id/tempIncrementTap"
+            app:layout_constraintLeft_toLeftOf="@id/tempIncrementClick"
+            app:layout_constraintRight_toRightOf="@id/tempIncrementClick"
             android:textSize="40sp"
             android:textColor="@color/colorTitle"
             android:textStyle="bold"
@@ -42,7 +42,7 @@
 
 
         <Button
-            android:id="@+id/tempIncrementTap"
+            android:id="@+id/tempIncrementClick"
             style="@style/ButtonInShop"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -50,21 +50,21 @@
             android:text="@string/tempIncrementButton" />
 
         <Button
-            android:id="@+id/tempAutoTap"
+            android:id="@+id/tempAutoClick"
             style="@style/ButtonInShop"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tempIncrementTap"
+            app:layout_constraintTop_toBottomOf="@id/tempIncrementClick"
             android:text="@string/tempAutoClickButton" />
 
 
         <Button
-            android:id="@+id/btn_5"
+            android:id="@+id/mAutoClick"
             style="@style/ButtonInShop"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tempAutoTap"
-            android:text="@string/description_5" />
+            app:layout_constraintTop_toBottomOf="@id/tempAutoClick"
+            android:text="@string/mAutoClick" />
 
         <Button
             android:id="@+id/btnBack"
@@ -73,7 +73,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_5"
+            app:layout_constraintTop_toBottomOf="@id/mAutoClick"
             android:layout_marginTop="20dp"
             android:background="@color/btnBack"
             android:text="@string/backToMenu"
