--- a/app/src/main/res/layout/shop_activity.xml
+++ b/app/src/main/res/layout/shop_activity.xml
@@ -102,7 +102,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btnBack"
-            android:text="@string/clicks"
+            android:text="@string/coins"
             />
 
         <TextView
@@ -112,7 +112,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/clicksTextView"
-            android:text="@string/multiplayer_clicks"
+            android:text="@string/multiplayer_coins"
             />
 
         <TextView
