--- a/app/src/main/res/layout/list_item_opponent.xml
+++ b/app/src/main/res/layout/list_item_opponent.xml
@@ -18,8 +18,14 @@
 	<TextView
 			android:id="@+id/list_item_opponent_name"
 			android:layout_width="match_parent"
-			android:layout_centerVertical="true"
 			android:layout_height="wrap_content"
 			android:layout_toEndOf="@id/list_item_opponent_thumbnail"
 			style="@style/opponent_list_item"/>
+
+	<TextView
+			android:id="@+id/list_item_opponent_ip"
+			android:layout_below="@id/list_item_opponent_name"
+			android:layout_toEndOf="@id/list_item_opponent_thumbnail"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"/>
 </RelativeLayout>
