--- a/app/src/main/res/layout/fragment_block_list.xml
+++ b/app/src/main/res/layout/fragment_block_list.xml
@@ -4,5 +4,6 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:id="@+id/block_recycler_view"
+		android:paddingBottom="100sp"
 		>
 </android.support.v7.widget.RecyclerView>
