[-] Bug fixing. Added new configs.

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -105,7 +105,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:background="@drawable/buttons_style"
-			android:text="IncClick \n 1 coin"
+			android:text="@string/incclick_coins"
 			android:paddingStart="20dp"
 			android:textAlignment="textStart"
 			app:layout_constraintBottom_toTopOf="@+id/btnAutoTap"
@@ -122,7 +122,7 @@
 			android:layout_height="wrap_content"
 			android:layout_toEndOf="@id/btnIncTap"
 			android:background="@drawable/buttons_style"
-			android:text="AutoClick \n 1 coin"
+			android:text="@string/autoclick_coins"
 			android:paddingStart="20dp"
 			android:textAlignment="textStart"
 			app:layout_constraintBottom_toTopOf="@+id/btnRegularIncTap"
