--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -29,9 +29,8 @@
 		android:id="@+id/tvCurrentLevel"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		style="@style/TextStyleGameTitle"
 		android:text="@string/current_level"
-		android:textColor="@color/colorToast"
-		android:textSize="26sp"
 		android:layout_centerHorizontal="true"/>
 
 
@@ -74,9 +73,10 @@
 		android:layout_centerHorizontal="false"
 		android:layout_marginBottom="20sp"
 		android:paddingTop="20sp"
-		android:textSize="20sp"
+		style="@style/TextStyleGameTitle"
 		android:paddingStart="50sp"
-		android:paddingEnd="50sp"/>
+		android:paddingEnd="50sp"
+		android:textSize="15sp"/>
 
 	<TextView
 		android:id="@+id/tvMultiplayerCoinsCounter"
@@ -87,7 +87,8 @@
 		android:layout_centerHorizontal="false"
 		android:layout_marginBottom="20sp"
 		android:paddingTop="20dp"
-		android:textSize="20sp"/>
+		style="@style/TextStyleGameTitle"
+		android:textSize="15sp"/>
 
 
 	<android.support.constraint.ConstraintLayout
@@ -102,7 +103,7 @@
 
 		<Button
 			android:id="@+id/btnIncTap"
-			style="@style/TextStyle"
+			style="@style/TextStyleGame"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:background="@drawable/buttons_style"
@@ -118,7 +119,7 @@
 
 		<Button
 			android:id="@+id/btnAutoTap"
-			style="@style/TextStyle"
+			style="@style/TextStyleGame"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_toEndOf="@id/btnIncTap"
@@ -135,7 +136,7 @@
 
 		<Button
 			android:id="@+id/btnRegularIncTap"
-			style="@style/TextStyle"
+			style="@style/TextStyleGame"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_toEndOf="@id/btnIncTap"
@@ -151,7 +152,7 @@
 
 		<Button
 			android:id="@+id/btnRegularAutoTap"
-			style="@style/TextStyle"
+			style="@style/TextStyleGame"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_toEndOf="@id/btnIncTap"
