--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1976d2</color>
-    <color name="colorPrimaryDark">#1a237e</color>
-    <color name="colorAccent">#ed4d87</color>
-    <color name="colorTitle">#0d47a1</color>
-    <color name="colorPoint">#9400D3</color>
+    <color name="colorPrimary">#C85108</color>
+    <color name="colorPrimaryDark">#C85108</color>
+    <color name="colorAccent">#C85108</color>
+    <color name="colorTitle">#C85108</color>
+    <color name="colorPoint">#C85108</color>
     <color name="colorToast">#111</color>
-    <color name="clock">#832fea</color>
+    <color name="clock">#C85108</color>
     <color name="colorBtnShop">#1565c0</color>
-    <color name="btnText">#fff</color>
+    <color name="btnText">#F3F0D1</color>
     <color name="btnBack">#02bbf9</color>
-    <color name="enabled">#dba1a1a1</color>
-    <color name="pressed">#304ffe</color>
-    <color name="statisticPoints">#111</color>
+    <color name="enabled">#F3F0D1</color>
+    <color name="pressed">#C85108</color>
+    <color name="statisticPoints">#C85108</color>
 
-    <color name="accent">#1565c0</color>
+    <color name="accent">#C85108</color>
     <color name="foreground">#212121</color>
-    <color name="background">#e8eaf6</color>
+    <color name="background">#F3F0D1</color>
     <color name="black">#000000</color>
 </resources>
