--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">#C85108</item>
         <item name="colorPrimaryDark">@color/foreground</item>
-        <item name="colorAccent">@color/accent</item>
+        <item name="colorAccent">#C85108</item>
         <item name="android:statusBarColor">#C85108</item>
     </style>
 
@@ -29,7 +29,7 @@
 
     <style name="ButtonStart" parent="Base.AlertDialog.AppCompat.Light">
         <item name="android:textColor">@color/btnText</item>
-        <item name="android:background">@color/accent</item>
+        <item name="android:background">#C85108</item>
         <item name="android:textSize">28sp</item>
         <item name="android:width">180dp</item>
         <item name="android:padding">5dp</item>
@@ -39,7 +39,7 @@
 
     <style name="ButtonMultiplayer" parent="Base.AlertDialog.AppCompat.Light">
         <item name="android:textColor">@color/btnText</item>
-        <item name="android:background">@color/accent</item>
+        <item name="android:background">#C85108</item>
         <item name="android:textSize">28sp</item>
         <item name="android:width">180dp</item>
         <item name="android:padding">5dp</item>
@@ -59,5 +59,17 @@
         <item name="android:fontFamily">@font/goma_cookie</item>
     </style>
 
+    <style name="TextStyleGame">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:fontFamily">@font/goma_cookie</item>
+    </style>
+
+
+    <style name="TextStyleGameTitle">
+        <item name="android:textSize">26sp</item>
+        <item name="android:textColor">#C85108</item>
+        <item name="android:fontFamily">@font/goma_cookie</item>
+    </style>
 
 </resources>
