--- a/app/src/main/res/layout/dialog_coming_soon.xml
+++ b/app/src/main/res/layout/dialog_coming_soon.xml
@@ -6,9 +6,12 @@
     android:background="#F3F0D1">
     <TextView
         android:gravity="center"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:text="Coming soon"
         style="@style/TextStyleGameTitle"
+        android:textSize="32sp"
         />
 </LinearLayout>
