--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -74,6 +74,7 @@
 		style="@style/TextStyleGameTitle"
 		android:paddingStart="50sp"
 		android:paddingEnd="50sp"
+		android:layout_marginBottom="13sp"
 		android:textSize="12sp"/>
 
 	<TextView
