--- a/app/src/main/res/layout/dialog_settings.xml
+++ b/app/src/main/res/layout/dialog_settings.xml
@@ -9,31 +9,29 @@
 
     <TextView
         android:id="@+id/SoundE"
-        android:layout_width="98dp"
+        android:layout_width="wrap_content"
         android:layout_height="42dp"
         android:layout_marginTop="20dp"
         android:text="Sound effects:"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/seekBarE"
+        app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="13dp" />
 
     <TextView
         android:id="@+id/SoundM"
-        android:layout_width="101dp"
-        android:layout_height="66dp"
-        android:layout_marginStart="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="63dp"
         android:text="Sound of music:"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/seekBarM"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/SoundE"
-        app:layout_constraintVertical_bias="0.157" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="13dp" />
 
     <SeekBar
         android:id="@+id/seekBarE"
-        android:layout_width="250dp"
+        android:layout_width="175dp"
         android:layout_height="50dp"
         android:max="100"
         android:progress="50"
@@ -46,7 +44,7 @@
 
     <SeekBar
         android:id="@+id/seekBarM"
-        android:layout_width="250dp"
+        android:layout_width="175dp"
         android:layout_height="50dp"
         android:max="100"
         android:progress="50"
@@ -59,15 +57,17 @@
     <Button
         android:id="@+id/btnClearGameSaves"
         style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_row="5"
         android:layout_column="0"
-        app:layout_constraintTop_toBottomOf="@+id/seekBarM"
         android:layout_gravity="center_horizontal"
         android:drawableStart="@drawable/icon_sale"
         android:text="@string/clearGameSaves"
-        tools:layout_editor_absoluteX="101dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/seekBarM" />
 
 
 </android.support.constraint.ConstraintLayout>
